--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project3",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://cryptoc-project.herokuapp.com/",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
